fix monospace, spacing

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,78 +2,81 @@
 @import url('https://rsms.me/inter/inter-ui.css');
 
 @font-face {
-    font-family: "Source Code Pro";
-    src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-extralight.woff");
-    font-weight: 200;
-  }
+  font-family: "Source Code Pro";
+  src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-extralight.woff");
+  font-weight: 200;
+}
 
-  @font-face {
-    font-family: "Source Code Pro";
-    src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-light.woff");
-    font-weight: 300;
-  }
+@font-face {
+  font-family: "Source Code Pro";
+  src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-light.woff");
+  font-weight: 300;
+}
 
-  @font-face {
-    font-family: "Source Code Pro";
-    src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-regular.woff");
-    font-weight: 400;
-  }
+@font-face {
+  font-family: "Source Code Pro";
+  src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-regular.woff");
+  font-weight: 400;
+}
 
-  @font-face {
-    font-family: "Source Code Pro";
-    src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-medium.woff");
-    font-weight: 500;
-  }
+@font-face {
+  font-family: "Source Code Pro";
+  src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-medium.woff");
+  font-weight: 500;
+}
 
-  @font-face {
-    font-family: "Source Code Pro";
-    src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-bold.woff");
-    font-weight: 600;
-  }
+@font-face {
+  font-family: "Source Code Pro";
+  src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-bold.woff");
+  font-weight: 600;
+}
 
-  @font-face {
-    font-family: "Source Code Pro";
-    src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-black.woff");
-    font-weight: 700;
-  }
+@font-face {
+  font-family: "Source Code Pro";
+  src: url("https://storage.googleapis.com/media.urbit.org/fonts/scp-black.woff");
+  font-weight: 700;
+}
 
-  body {
-    font-family: "Inter", "Inter UI", sans-serif;
-    @extend .lh-copy;
-    -webkit-font-smoothing: antialiased;
-  }
-  a {
-    color: black;
-    border-bottom: 1px solid black;
-    text-decoration: none;
-  }
+body {
+  font-family: "Inter", "Inter UI", sans-serif;
+  @extend .lh-copy;
+  -webkit-font-smoothing: antialiased;
+}
 
-  .mono {
-    font-family: "Source Code Pro", monospace;
-    font-style: normal;
-  }
+a {
+  color: black;
+  border-bottom: 1px solid black;
+  text-decoration: none;
+}
 
-  .employee-directory {
-    p {
-      margin-block-start: 0;
-      margin-block-end: 0;
-      margin: 0;
-      display: block;
-    }
-    img {
-      max-width: 256px;
-    }
-    section {
-      flex-basis: 100%;
-      flex: 1;
-    }
-  }
+address,
+.mono {
+  font-family: "Source Code Pro", monospace;
+  font-style: normal;
+}
 
-  aside#graphic {
-    right: 0;
-    height: 32rem;
-    width: 32rem;
+.employee-directory {
+  p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin: 0;
+    display: block;
   }
+  img {
+    max-width: 256px;
+  }
+  section {
+    flex-basis: 100%;
+    flex: 1;
+    margin-bottom: 4rem;
+  }
+}
+
+aside#graphic {
+  right: 0;
+  height: 32rem;
+  width: 32rem;
+}
 
 
 @media screen and (max-width: 60em) {
